# parley

./: .gitignore  README.md  pyproject.toml
docs/: CLI_MVP_WALKTHROUGH.md  IMPLEMENTATION_PLAN.md  PROVIDER_CLI_ADAPTERS.md  SPEC_TRACKING_MATRIX.md  hld-architecture.md
docs/specs/: 00-spec-index.md  01-cli-command-spec.md  02-project-artifact-schema-spec.md  03-parser-interface-format-spec.md  04-placeholder-token-integrity-spec.md  05-confidence-model-spec.md  06-translation-workflow-spec.md  07-validation-error-taxonomy-spec.md  08-translation-memory-spec.md  09-provider-cli-adapter-protocol-spec.md
examples/android-demo/: README.md
examples/android-demo/values/: strings.xml
examples/ios-demo/: README.md
examples/ios-demo/en.lproj/: Localizable.strings
examples/ios-demo/fr-broken.lproj/: Localizable.strings
examples/ios-demo/fr-clean.lproj/: Localizable.strings
src/parley/: __init__.py  __main__.py  artifacts.py  atomic.py  cli.py  command_json.py  context.py  errors.py  hashing.py  localization.py  parsers.py  paths.py  project_init.py  providers.py  reports.py  serialization.py  translation.py  validation.py
tests/: helpers.py  test_android_demo_smoke.py  test_command_json.py  test_context_seed.py  test_ios_demo_smoke.py  test_parsers.py  test_project_init.py  test_translate.py  test_validation_and_localization.py
