[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parley"
version = "0.1.0"
description = "Project-first localization workflow tooling."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
parley = "parley.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

